--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -29,7 +32,7 @@
     "@types/react-dom": "18.2.18",
     "postcss": "8.4.33",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
   }
