--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "clsx": "^2.1.1",
     "geist": "^1.2.1",
     "lucide-react": "^0.436.0",
-    "next": "latest",
+    "next": "^15.0.2",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
@@ -29,7 +29,7 @@
     "@types/react-dom": "18.2.18",
     "postcss": "8.4.33",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
   }
