--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.2.1",
     "lucide-react": "^0.436.0",
+    "mui": "^0.0.1",
     "next": "^15.0.2",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
