--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@supabase/supabase-js": "latest",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "concurrently": "^9.1.0",
     "geist": "^1.2.1",
     "lucide-react": "^0.436.0",
     "next": "^15.0.2",
@@ -28,13 +27,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "to-regex-range": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.0",
     "postcss": "^8.4.33",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.14",
