fix/serverjs-ES-syntax-parandatud

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "concurrently \"next dev\" \"node app/backend/server.js\"",
     "build": "next build",
